# modorganizer-nxmhandler

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: CMakeLists.txt  addbinarydialog.cpp  handlerstorage.cpp  handlerwindow.cpp  main.cpp  nxmhandler_en.ts  utility.h
src/linux/: handlerstorage.cpp  utility.cpp
src/win32/: handlerstorage.cpp  utility.cpp
